# harness

./: .gitignore  README.md
conf/: harness.env
docker/: mgmt_token
docker/consul/: docker-compose.yml
docker/consul/acl/: llllllocal.json
docker/consul/config/: consul.json  local.json
docker/consul/config2/: alert-slack-py.sh  alert-slack.sh  alerter.py  wait-for-consul.sh
docker/consul/services/: service1.json
docker/services/: check.sh  register.sh  set_config.sh
src/: pyproject.toml
src/bqm/harness/: __init__.py  base.py  commands.py  cradle.py  env_switching_repo_launcher.py  file_launcher.py  launcher.py  msg_factory.py  proc_impl.py  repo_launcher.py
src/bqm/harness/conf/: config_parser.py  service_config.py
src/bqm/utils/: consulx.py  git_delete.py  gitx.py  gitx2.py  logconfig.py
src/bqm/utils/entry/: parser.py  runner.py  wrapper.py
src/bqm/utils/mamba/: __init__.py  env_manager.py  env_recipe.py  mambax.py  package.py  pyenv.py
tests/dynamic_launcher/: arbitrary_function.py
tests/entry/: mixed_bag_of_entry_points.py
tests/harness/: callable_class_test.py  cradle_test.py  cradle_test_from_repo.py  file_launcher_launch_file_test.py  launch_callable_class_test.py  launch_cradle_class_test.py  launch_file_from_repo_test.py  launch_function_test.py  launch_using_consul_config_test.py  repo_launcher_launch_file_test.py
tests/mambax/: env_creation_test.py  mamba_pkg_spec_install_test.py  mamba_run_code_test.py  mamba_run_test.py  pip_install_reqs_test.py  pip_install_test.py  pkg_install_test.py  requirements.txt
(+29 files in other folders)
