[build-system]
requires = [
    "setuptools>=42",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bqm-trading-harness"
version = "0.1.1"
description = "BQM data access layer"
dependencies = [
    "pandas>=2.2.3",
    "clickhouse-connect>=0.8.15",
    "numpy>=2.1.3",
    "pyarrow>=19.0.1",
    "jsonschema>=4.25.1",
    "python-consul2>=0.1.5",
    "fastapi>=0.115.12",
    "psutil>=7.1.3",
    "gitpython>=3.1.45",

         

]
